Fixed table overflow in Chrome

--- a/main.css
+++ b/main.css
@@ -18,6 +18,9 @@
 	--textarea-padding: 0.2em;
 	--main-lr-padding: 6%;
 }
+* {
+	box-sizing: border-box;
+}
 
 body {
 	background-color: var(--main-bg-color);
@@ -82,6 +85,7 @@ h1 {
 	float: right;
 	padding: 10%;
 	transform: translateX(5%);
+	font-family: var(--main-font-family);
 }
 
 .spacer {
@@ -151,15 +155,9 @@ input.list {
 .tableWrapper {
 	overflow-x:auto;
 }
-table {
-	table-layout: fixed;
-}
 th {
 	font-size: var(--main-font-size);
 	font-weight: normal;
-}
-th.close {
-	width: var(--close-button-column-width);
 }
 table input {
 	width: 100%;
@@ -167,7 +165,7 @@ table input {
 table input[type=image] {
 	vertical-align: middle;
 	border-radius: 50%;
-	width: 0.4em;
+	width: 1em;
 	height: auto;
 }
 table input.close {
